[project]
name = "algorithm-code-review"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "langchain>=0.3.26",
    "langchain-anthropic>=0.3.17",
    "langchain-google-genai>=2.1.6",
    "langchain-openai>=0.3.27",
    "selenium>=4.34.2",
]
